<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="lamaatech.com.musicalapp.PlayListActivity.PlayListActivity"
    tools:showIn="@layout/activity_playlist">


    <TextView
        style="@style/CodeFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/playlist" />

    <TextView
        style="@style/CodeFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/playlist_description" />

    <Button
        android:id="@+id/songDetails_button"
        style="@style/imageButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_details" />

    <Button
        android:id="@+id/main_button"
        style="@style/imageButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main" />

    <Button
        android:id="@+id/payment_button"
        style="@style/imageButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment" />

</LinearLayout>
