<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="lamaatech.com.musicalapp.SongDetailsActivity.SongDetailsActivity"
    tools:showIn="@layout/activity_song_details">

    <TextView
        style="@style/CodeFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/playing_now" />


    <TextView
        style="@style/CodeFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/song_details_description" />


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/music_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            style="@style/imageButtonStyle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/play_music" />

        <ImageButton
            style="@style/imageButtonStyle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/stop_music" />

        <ImageButton
            style="@style/imageButtonStyle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/pause_music" />

    </LinearLayout>


    <Button
        android:id="@+id/playList_button"
        style="@style/imageButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playlist" />

    <Button
        android:id="@+id/main_button"
        style="@style/imageButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main" />

    <Button
        android:id="@+id/payment_button"
        style="@style/CodeFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment" />

</LinearLayout>
